Updates from Overleaf

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -194,7 +194,7 @@ V(\lambda) = \int P((<D(z))/D_n(\lambda))\frac{dV_c}{dz}\frac{dz}{1+z}
 \end{equation}    
     \item where $D(z)$ is the luminosity distance for redshift z, $V_c$ is the comoving volume.
 
-    \item to compute the $\mu(\mathcal{R},\Lambda)$, we use previously defined Volume in $Gpc^{-3}yr^{-1}$ and observing at this senstivity for the time $T$, the average number of detections would be as follows: \\
+    \item to compute the $\mu(\mathcal{R},\Lambda)$, we use previously defined Volume in $Gpc^{-3}yr^{-1}$ and observing at this sensitivity for the time $T$, the average number of detection would be as follows: \\
 \begin{equation}
 \label{eq:mu}
   \mu(\mathcal{R},\Lambda) = \int(VT)\lambda \mathcal{R}p(\lambda|\Lambda)d\lambda  
@@ -273,32 +273,28 @@ The following is the figure which shows the
 \subsection{Second Population: $0<\sigma_e<0.38$}
 
 
-
 \begin{figure}
-\includegraphics[width=0.45\textwidth]{paper/figures/massloss.png}
+\includegraphics[width=0.45\textwidth]{paper/figures/pop3d038.png}
 \caption{\label{fig:population05}\textbf{Synthetic Population of Eccentric BBHs}}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=0.45\textwidth]{paper/figures/massloss.png}
+\includegraphics[width=0.45\textwidth]{paper/figures/pop2d038.png}
 \caption{\label{fig:population05}\textbf{Synthetic Population of Eccentric BBHs}}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=0.45\textwidth]{paper/figures/massloss.png}
+\includegraphics[width=0.45\textwidth]{paper/figures/pop2d038scl.png}
 \caption{\label{fig:population05}\textbf{Synthetic Population of Eccentric BBHs}}
 \end{figure}
-
 \begin{figure}
-\includegraphics[width=0.45\textwidth]{paper/figures/massloss.png}
+\includegraphics[width=0.45\textwidth]{paper/figures/pop2d038diff.png}
 \caption{\label{fig:population05}\textbf{Synthetic Population of Eccentric BBHs}}
 \end{figure}
-
 \begin{figure}
-\includegraphics[width=0.45\textwidth]{paper/figures/massloss.png}
+\includegraphics[width=0.45\textwidth]{paper/figures/massloss038.png}
 \caption{\label{fig:population05}\textbf{Synthetic Population of Eccentric BBHs}}
 \end{figure}
-
 
 
 % \begin{align} \label{eq:strain_mode}
