--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -116,7 +116,7 @@
 
 \begin{document}
 
-\title{Population Inference of Eccentric Binary Black Holes}
+\title{Population Inference of Non-Spinning Eccentric Binary Black Holes}
 \author{M. Zeeshan}
 \affiliation{\RIT}
 \author{R. O'Shaughnessy}
@@ -127,80 +127,149 @@ Yet to work.
 \maketitle
 
 \section{Introduction}
-The Advanced LIGO  \cite{2015CQGra..32g4001T}  and Virgo \cite{gw-detectors-Virgo-original-preferred}  ground-based gravitational wave (GW) detectors have
-identified several coalescing compact binaries
-\cite{DiscoveryPaper,LIGO-O1-BBH,2017PhRvL.118v1101A,LIGO-GW170814,LIGO-GW170608,LIGO-GW170817-bns}.  
-%
+Later this section
 
 
 
 \section{Methods}
 \label{sec:methods}
 
-The Binary Black Holes (BBHs) can be described by three intrinsic and seven extrinsic parameters. The intrinsic parameters: such as mass ($m_i$), spin $( \chi_i)$, and eccentricity $(e)$, are subject to the orbital evolution of the binary. The extrinsic parameters: orientation (orbital phase, polarization, and inclination), sky location (right ascension, declination), luminosity distance, and coalescence time depend on the observer.
+The coalescing BBH can be completely described by three intrinsic and seven extrinsic parameters. The intrinsic parameters mass of binary component ($m_i$), spin $( \chi_i)$, and eccentricity $(e)$  are subject to the orbital evolution of the binary. The extrinsic parameters are orientation (orbital phase, polarization, and inclination), sky location (right ascension and declination), luminosity distance, and coalescence time depend on the observer.
 
-{\color{red}Most of the eccentric binaries are driven by low mass events \cite{?}}. Therefore,  in this study, we  will consider modest masses $(1M_\odot-40M_\odot)$, non-spinning $(\chi_i = 0)$, and eccentric $(0-1)$ binaries. In addition, we will use mass ratio $q=m_1/m_2$ with condition $m_1>m_2$ and total mass $M=m_1+m_2$. 
+Most of the eccentric binary black hole (EBBHs) are driven by low masses $(10M_\odot-30M_\odot)$ and if any component of the binary have mass less than $30 M_\odot$ then only $10\%$ of them are able to maintain eccentricity near the last stable orbit.  \cite{mass_ecc_limit_2018}. Therefore,  in this study, we  will consider binaries with non-spinning $(\chi_i = 0)$, eccentric $(0-0.5)$ and moderate mass range $(10M_\odot-50M_\odot)$. In addition, we will use mass ratio $q=m_1/m_2$ with condition $m_1>m_2$ and total mass $M=m_1+m_2=100M_\odot$.
 
-\subsection{Hierarchical Bayesian Modeling}
-\begin{itemize}
-    \item We have N discrete detection.
-    \item each detection has data $d_1,d_2,d_3,...,d_N$
-    \item each data point $d_N$ has properties denoted by $\lambda_1,\lambda_2,...,\lambda_i$
-    \item  $ \lambda_i$ are parameters such as mass, spin, eccentricity, and location.
-    \item Each parameter has its uncertainty.
-    \item This uncertainty is described by the probability of the data given the parameter value. We call it the likelihood function of one single event. $\mathcal{L}(\lambda) = p(d|\lambda)$
-    \item the waveform gives the parameter value.
-    \item waveform is a mathematical function.
-    \item Once you have a likelihood function, you can use prior( usually it's uniform: which gives equal probability to each event) to find the posterior. $p(\lambda|d) \propto p(d|\lambda) p(\lambda)$  
+\subsection{Hierarchical Bayesian Modeling (HBM)}
+
+We discussed the various formation scenario of EBBHs in the previous section; each one has a distinct signature in the GW signals. Hence, it's trivial to observe the effect of each scenario or the mixed effect on the merging population. It leads us to make the population model, which considers each scenario and allows distinct merger rates for them.
+
+Once we have the population models, our next obstacle is constraining them with observational data. While constraining the model, we must consider the sensitivity of LIGO-VIRGO-KAGRA (LVK) and uncertainty in each detection. Therefore, the HBM is a good choice to constrain the population model.
+
+In the HBM, we have the N number of discrete detection, in our case, from LVK. Those detections provide merger data denoted as $d_1,d_2,d_3,...,d_N$ where each $d_i$ shows the BBH. Each $d_i$ or merger has mass, spin, and eccentricity properties. These properties, often called parameters, are denoted by $\lambda_1,\lambda_2,\lambda_3,...,\lambda_i$. Each parameter has its uncertainty, and we express it by the probability of the data given the parameter value. We also refer to it as the likelihood function $\mathcal{L}(\lambda)=p(d|\lambda)$ of one event/detection. The given value of $\lambda$ to calculate the likelihood is obtained from the mathematical model of the waveform. Once you have a likelihood function, you can use a prior (usually, a uniform) to find the posterior probability using the Bayes theorem.
+
+\begin{equation}
+\label{eq:Bayes_ind}    
+p(\lambda|d) \propto p(d|\lambda) p(\lambda)
+\end{equation}
+
+This posterior probability will constrain the properties of each binary, such as mass, spin, and eccentricity. We may get the inference of those parameters using Rapid parameter Inference on gravitational wave sources via Iterative Fitting (RIFT): an open source code for parameter estimation of the binary sources \cite{rift_2018}.
+
+
+
+%\begin{itemize}
+%    \item We have N discrete detection.
+%    \item each detection has data $d_1,d_2,d_3,...,d_N$
+%    \item each data point $d_N$ has properties denoted by $\lambda_1,\lambda_2,...,\lambda_i$
+%    \item  $ \lambda_i$ are parameters such as mass, spin, eccentricity, and location.
+%    \item Each parameter has its uncertainty.
+%    \item This uncertainty is described by the probability of the data given the parameter value. We call it the likelihood function of one single event. $\mathcal{L}(\lambda) = p(d|\lambda)$
+%    \item the waveform gives the parameter value.
+%    \item waveform is a mathematical function.
+%    \item Once you have a likelihood function, you can use prior( usually it's uniform: which gives equal probability to each event) to find the posterior. $p(\lambda|d) \propto p(d|\lambda) p(\lambda)$  
     
-\end{itemize}
+%\end{itemize}
 
 
 \subsection{Population Inference}
 
-\begin{itemize}
-    \item We have the parameter estimation from RIFT or any other method. It will give us a distribution for each parameter, and we may take the mean value of it.
-    \item Our first task is to find the likelihood function for the population parameters: such as mass and eccentricity.
-    \item We denote population parameters with \\ $\Lambda \equiv  (\alpha, \mathcal{R}, m_{min}, m_{max}, e)$.
-    \item uncertainty in $\Lambda$ is a likelihood which can be written as $\mathcal{L}(\Lambda)\equiv p(d_1,d_2,d_3,...,d_N|\Lambda)$
-    \item By applying the Bayes theorem, we can turn above likelihood into posterior probability of a parameter.
+Now having the parameters of individual sources, we are ready to make a population inference. Following the Bayesian framework for inference, our first task is to find the likelihood of the population parameter $\Lambda$, also considered as uncertainty in $\Lambda$ equivalent to the probability of the individual sources given the population parameter $\Lambda \equiv  (\alpha, \mathcal{R}, m_{min}, m_{max}, \sigma_e)$ written as follows. 
+
+\begin{equation}
+\label{eq:likelihood_pop}    
+\mathcal{L}(\Lambda)\equiv p(d_1,d_2,d_3,...,d_N|\Lambda)
+\end{equation}
+
+where $\alpha$ is the power law index given in Eq. \ref{eq:plaw}, $\mathcal{R}$ is the merger rate, $m_{min}, m_{max}$ are the minimum, and maximum masses of the binary components in the population respectively, and $\sigma_e$ is the orbital eccentricity distribution. 
+
+The second step is to find the posterior probability, and we can do this by using the above likelihood in the Bayes theorem as given below.
+
 \begin{equation}
 \label{eq:Bayes}    
 p(\Lambda|d_1,d_2,...,d_N)= \frac{p(\Lambda)p(d_1,d_2,...,d_N|\Lambda)}{p(d_1,d_2,...,d_N)}
 \end{equation}
 
-    \item where $p(\Lambda|d_1,d_2,d_3,...,d_N)$ is posterior, $p(\Lambda)$ is prior, $p(d_1,d_2,d_3,...,d_N)$ is normalization/evidence, and $p(d_1,d_2,d_3,...,d_N|\Lambda)$ is likelihood.
-    \item We will use inhomogeneous Poisson Process scaled by rate $\mathcal{R} = \frac{dN}{dtdV_c}$ and parameterize by $\Lambda$ to find the likelihood  $\mathcal{L}(\mathcal{R},\Lambda)\equiv p(D|\mathcal{R},\Lambda)$ of an astrophysical population given the merger rate and parameter $\Lambda$. 
-    {\color{red}I think these values of $\Lambda$ are provided by the power law model}. \\
+where $p(\Lambda|d_1,d_2,d_3,...,d_N)$ is posterior, $p(\Lambda)$ is prior, $p(d_1,d_2,d_3,...,d_N)$ is normalization constant or sometime known as evidence.
+
+To conduct our specific analysis for mass and eccentricity distribution, we will use the inhomogeneous Poisson Process scaled by rate $\mathcal{R} = \frac{dN}{dtdV_c}$ and parameterize by $\Lambda$ to find the likelihood  $\mathcal{L}(\mathcal{R},\Lambda)\equiv p(D|\mathcal{R},\Lambda)$ of an astrophysical population given the merger rate and parameter $\Lambda$. 
+
 \begin{equation}
 \label{eq: likelihood}
-\mathcal{L}(\mathcal{R},\Lambda) \propto e^{-\mu(\mathcal{R},\Lambda)}\prod_{n=1}^N\int d\lambda l_n(\lambda) \mathcal{R} p(\lambda|\Lambda)    
+\mathcal{L}(\mathcal{R},\Lambda) \propto e^{-\mu(\mathcal{R},\Lambda)}\prod_{n=1}^N\int d\lambda \ell_n(\lambda) \mathcal{R} p(\lambda|\Lambda),
 \end{equation}
+
+Where $\mu(\mathcal{R},\Lambda)$ is the expected number of detection under the given population parametrization $\Lambda$ with the overall rate $\mathcal{R}$. $\ell_n(\lambda)=p(d_n|\lambda)$ is the likelihood of the data $d_n$ given binary parameter.
+Finally, we will get our posterior as $p(\mathcal{R},\Lambda)\propto p(\mathcal{R},\Lambda)  \mathcal{L}(\mathcal{R},\Lambda)$.
+
+The soundest approach is to find the analytical posterior. However, most of the time, it's difficult to find the analytical solution to such a complicated equation involving multidimensional integrals. Therefore, a practical approach is to use the computational methods.
+Our study will use Goodman and Weare's affine invariant Markov chain Monte Carlo (MCMC) \cite{mcmc_paper} method to find the posterior distribution of population parameters. This method draws samples (set of parameters $\alpha,\mathcal{R},m_{min},m_{max},\sigma_e$ that make one model) from the targeted distribution; in our case, it's the power law model given in Eq. \ref{eq:plaw}, then compares it with the given data (collection of individual events) and store the best-fit sample. We may iterate this as we need and store multiple sample values untill they converge. 
+This method is in a Python package called EMCEE \cite{emcee_paper}.
+
+
+
+
+
+%\begin{itemize}
+%    \item We have the parameter estimation from RIFT or any other method. It will give us a distribution for each parameter, and we may take the mean value of it.
+ %   \item Our first task is to find the likelihood function for the population parameters: such as mass and eccentricity.
+%    \item We denote population parameters with \\ $\Lambda \equiv  (\alpha, \mathcal{R}, m_{min}, m_{max}, e)$.
+%    \item uncertainty in $\Lambda$ is a likelihood which can be written as $\mathcal{L}(\Lambda)\equiv p(d_1,d_2,d_3,...,d_N|\Lambda)$
+%    \item By applying the Bayes theorem, we can turn above likelihood into posterior probability of a parameter.
+%\begin{equation}
+%\label{eq:Bayes}    
+%p(\Lambda|d_1,d_2,...,d_N)= \frac{p(\Lambda)p(d_1,d_2,...,d_N|\Lambda)}{p(d_1,d_2,...,d_N)}
+%\end{equation}
+
+%    \item where $p(\Lambda|d_1,d_2,d_3,...,d_N)$ is posterior, $p(\Lambda)$ is prior, $p(d_1,d_2,d_3,...,d_N)$ is normalization/evidence, and $p(d_1,d_2,d_3,...,d_N|\Lambda)$ is likelihood.
+ 
+%   \item We will use inhomogeneous Poisson Process scaled by rate $\mathcal{R} = \frac{dN}{dtdV_c}$ and parameterize by $\Lambda$ to find the likelihood  $\mathcal{L}(\mathcal{R},\Lambda)\equiv p(D|\mathcal{R},\Lambda)$ of an astrophysical population given the merger rate and parameter $\Lambda$. 
+%    {\color{red}I think these values of $\Lambda$ are provided by the power law model}. \\
+%\begin{equation}
+%\label{eq: likelihood}
+%\mathcal{L}(\mathcal{R},\Lambda) \propto e^{-%\mu(\mathcal{R},\Lambda)}\prod_{n=1}^N\int d\lambda %\ell_n(\lambda) \mathcal{R} p(\lambda|\Lambda)    
+%\end{equation}
         
-    \item where $\mu(\mathcal{R},\Lambda)$ are the expected number of detections under the given population parametrization $\Lambda$ with overall rate $\mathcal{R}$. $l_n(\lambda)=p(d_n|\lambda)$ is the likelihood of the data $d_n$ given binary parameter.
-    \item now we can find the posterior by Baye's theorem. \\
-    $p(\mathcal{R},\Lambda)\propto p(\mathcal{R},\Lambda)  \mathcal{L}(\mathcal{R},\Lambda)$
-    \item calculation of this posterior is computationally expensive, therefore, we will use MCMC method to find the posterior distribution.
+%    \item where $\mu(\mathcal{R},\Lambda)$ are the expected number of detections under the given population parametrization $\Lambda$ with overall rate $\mathcal{R}$. $l_n(\lambda)=p(d_n|\lambda)$ is the likelihood of the data $d_n$ given binary parameter.
+ %   \item now we can find the posterior by Baye's theorem. \\
+ %   $p(\mathcal{R},\Lambda)\propto p(\mathcal{R},\Lambda)  \mathcal{L}(\mathcal{R},\Lambda)$
+%    \item calculation of this posterior is computationally expensive, therefore, we will use MCMC method to find the posterior distribution.
     
-\end{itemize}
-\subsection{VT Estimation}
-\begin{itemize}
-    \item Estimation of VT (sensitivity of the LVK) only depend on the mass. For the sake of simplicity {\color{red}(physics reason)}, we consider only non-spinning, non-eccentric and nonprecessing BH Binaries. 
-    \item Sources are detected if SNR is greater than 8.
-    \item V is characteristic volume in which source can be detected by LVK. It is orientation averaged sensitive 3-volume.
+%\end{itemize}
+
+\subsection{Volume Time (VT) Estimation}
+
+To make our study realistic, including the sensitivity of the LVK instruments is significant. This sensitivity is defined by VT estimation. $V$ is the characteristic volume with units $Gpc^{-3}yr^{-1}$, which refers to the possible detection region in the sky for the LVK \cite{Volume_1993}, and $T$ is the time duration of making observations at this sensitivity.
+Existing LVK instruments' sensitivity depends only on the mass; therefore, we will get the same VT calculated previously \cite{Dan_2019} for non-spinning, non-eccentric, and no-precessing binaries. Hence, we briefly explain the calculations, but one may read Daniel Wysocki's article \cite{Dan_2019} for a deeper study.
+
+The Eq. \ref{eq:volume} calculates the orientation averaged sensitive volume \cite{Abbott_2016,richard2010volume}
+
 \begin{equation}
 \label{eq:volume}
 V(\lambda) = \int P((<D(z))/D_n(\lambda))\frac{dV_c}{dz}\frac{dz}{1+z}
 \end{equation}    
-    \item where $D(z)$ is the luminosity distance for redshift z, $V_c$ is the comoving volume.
+where $D(z)$ is the luminosity distance for redshift $z$, $V_c$ is the comoving volume. Finally, to compute the average number of detection, we will use Eq. \ref{eq:mu} and keep in mind that the merger will be accepted only if the signal-to-noise ratio exceeds 8 \cite{SNR_2010}.
 
-    \item to compute the $\mu(\mathcal{R},\Lambda)$, we use previously defined Volume in $Gpc^{-3}yr^{-1}$ and observing at this sensitivity for the time $T$, the average number of detection would be as follows: \\
 \begin{equation}
 \label{eq:mu}
   \mu(\mathcal{R},\Lambda) = \int(VT)\lambda \mathcal{R}p(\lambda|\Lambda)d\lambda  
 \end{equation}
-    \item where $p(\lambda|\Lambda)$ is the probability density function for a random binary in the universe to have intrinsic paramter $\lambda$. Keep in mind that $\lambda$ is equal to all the 15 parameters of a binary.
-\end{itemize}
+where $p(\lambda|\Lambda)$ is the probability density function for a random binary in the universe to have intrinsic parameter $\lambda$. Keep in mind that $\lambda$ is equal to all intrinsic and extrinsic parameters.
+
+%\begin{itemize}
+%    \item Estimation of VT (sensitivity of the LVK) only depend on the mass. For the sake of simplicity {\color{red}(physics reason)}, we consider only non-spinning, non-eccentric and nonprecessing BH Binaries. 
+%    \item Sources are detected if SNR is greater than 8.
+%    \item V is characteristic volume in which source can be detected by LVK. It is orientation averaged sensitive 3-volume.
+%\begin{equation}
+%\label{eq:volume}
+%V(\lambda) = \int P((<D(z))/D_n(\lambda))\frac{dV_c}{dz}\frac{dz}{1+z}
+%\end{equation}    
+%    \item where $D(z)$ is the luminosity distance for redshift z, $V_c$ is the comoving volume.
+
+%    \item to compute the $\mu(\mathcal{R},\Lambda)$, we use previously defined Volume in $Gpc^{-3}yr^{-1}$ and observing at this sensitivity for the time $T$, the average number of detection would be as follows: \\
+%\begin{equation}
+%\label{eq:mu}
+%  \mu(\mathcal{R},\Lambda) = \int(VT)\lambda \mathcal{R}p(\lambda|\Lambda)d\lambda  
+%\end{equation}
+%    \item where $p(\lambda|\Lambda)$ is the probability density function for a random binary in the universe to have intrinsic paramter $\lambda$. Keep in mind that $\lambda$ is equal to all the 15 parameters of a binary.
+%\end{itemize}
 
 \subsection{Power law Model}
 The following is the power law model. We added the Gaussian eccentricity in it. 
